--- a/scss/layout/_media-tablet.scss
+++ b/scss/layout/_media-tablet.scss
@@ -1,1 +1,10 @@
-
+@media (max-width: 768px){
+    .containerNovedades{
+        grid-template-columns: repeat(1, 1fr);  
+        grid-template-rows: repeat(1, 1fr); 
+        .cardN{
+            grid-template-columns: repeat(1, 1fr);  
+            grid-template-rows: repeat(1, 1fr);
+        }
+    }
+}
